[package]
name = "ember-link"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
dotenvy = "0.15.7"
envconfig = "0.11.0"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
josekit = "0.10.1"
nohash-hasher = "0.2.0"
parking_lot = "0.12.3"
protocol = { path = "../../packages/protocol" }
ractor = "0.14.7"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }
yrs = { version = "0.22.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
