[package]
name = "ember-link"
version = "0.0.1"
edition = "2021"

[dependencies]
server = { path = "../../packages/server", features = ["tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
